# comp-grafica-projs

./: .gitignore  README.md
abcg_horizon/: abcg_horizon.js  abcg_horizon.wasm  full_window.html  full_window_console.html  index.html
abcg_snake_game/: abcg_snake_game.data  abcg_snake_game.js  abcg_snake_game.wasm  full_window.html  full_window_console.html  index.html
abcg_testarossa/: abcg_testarossa.js  abcg_testarossa.wasm  full_window.html  full_window_console.html  index.html
examples/: CMakeLists.txt
examples/abcg_horizon/: CMakeLists.txt  camera.cpp  camera.hpp  kart.cpp  kart.hpp  labirinto.cpp  labirinto.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp  testarossa.cpp  testarossa.hpp
examples/abcg_snake_game/: CMakeLists.txt  cobrinha.cpp  cobrinha.hpp  comida.cpp  comida.hpp  gamedata.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp  tabuleiro.cpp  tabuleiro.hpp
examples/abcg_snake_game/assets/: objects.vert
examples/abcg_testarossa/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/abcg_testarossa/assets/: testarossa.py
examples/coloredtriangles/: main.cpp  openglwindow.cpp  openglwindow.hpp
examples/loadmodel/: main.cpp  openglwindow.cpp  openglwindow.hpp
examples/regularpolygons/: main.cpp  openglwindow.cpp  openglwindow.hpp
examples/sierpinski/: main.cpp  openglwindow.hpp
